--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@ body {
   cursor: pointer;
   background: #111;
   color: #fff;
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0 5px #0c0c0c; /* 初始凸起效果 */
+}
+
+#enter:active {
+  transform: translateY(4px);  /* 按下時往下移 */
+  box-shadow: 0 1px #0c0c0c;  /* 陰影縮小 */
+  background: #222;            /* 顏色稍微變深 */
 }
 
 /* ===== LAB ===== */
@@ -244,19 +252,22 @@ function drawSpring() {
   animCtx.fill();
 }
 
-// 繪圖自動縮放
-function drawGraph(ctx, data, scaleX, scaleY, color="#0f0") {
+// 繪圖自動縮放 + 線條平滑
+function drawGraph(ctx, data, color="#0f0") {
   ctx.clearRect(0,0,400,250);
   ctx.strokeStyle = color;
+  ctx.lineWidth = 2;
   ctx.beginPath();
   if(data.length===0) return;
-  const maxX = Math.max(...data.map(p=>Math.abs(p[0])),1);
-  const maxY = Math.max(...data.map(p=>Math.abs(p[1])),1);
+
+  const maxX = Math.max(...data.map(p=>Math.abs(p[0])), 1);
+  const maxY = Math.max(...data.map(p=>Math.abs(p[1])), 1);
+
   data.forEach((p,i)=>{
-    const px = 200 + (p[0]/maxX)*scaleX*10;
-    const py = 125 - (p[1]/maxY)*scaleY*50;
-    if(i===0) ctx.moveTo(px,py);
-    else ctx.lineTo(px,py);
+    const px = (p[0]/maxX) * 380 + 10;
+    const py = 125 - (p[1]/maxY) * 100;
+    if(i===0) ctx.moveTo(px, py);
+    else ctx.lineTo(px, py);
   });
   ctx.stroke();
 }
@@ -273,9 +284,9 @@ function loop() {
   energyData = energyData.slice(-500);
 
   drawSpring();
-  drawGraph(xtCtx, xtData, 20, 50, "#0f0");
-  drawGraph(phCtx, phaseData, 50, 20, "#ff5555");
-  drawGraph(enCtx, energyData, 20, 10, "#ffff00");
+  drawGraph(xtCtx, xtData, "#0f0");
+  drawGraph(phCtx, phaseData, "#ff5555");
+  drawGraph(enCtx, energyData, "#ffff00");
 
   requestAnimationFrame(loop);
 }
