Refactor index.html for improved layout and styles
Updated HTML structure and styles for the SHM Simulation Lab.

--- a/index.html
+++ b/index.html
@@ -3,80 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <title>SHM Simulation Lab</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-/* ===== Global ===== */
-body { margin: 0; font-family: system-ui, -apple-system, BlinkMacSystemFont; }
+body{margin:0;font-family:'Segoe UI',Tahoma,Verdana,sans-serif;}
 
-/* ===== HOME PAGE ===== */
-#home {
-  background: #a855f7;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#home h1 span {
-  font-size: 100px;
-  color: #fff;
-  display: inline-block;
-  animation: bounce 0.6s ease-in-out infinite alternate;
-}
-
-#home h1 span:nth-child(1){animation-delay:0s;}
-#home h1 span:nth-child(2){animation-delay:0.1s;}
-#home h1 span:nth-child(3){animation-delay:0.2s;}
-#home h1 span:nth-child(4){animation-delay:0.3s;}
+/* ===== HOME ===== */
+#home{background:#a855f7;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;position:relative;overflow:hidden;}
+#home h1{font-weight:900;font-size:100px;color:#fff;margin:0;}
+#home h1 span{display:inline-block;animation:bounce 0.6s ease-in-out infinite alternate;}
+#home h1 span:nth-child(1){animation-delay:0s;} #home h1 span:nth-child(2){animation-delay:0.1s;}
+#home h1 span:nth-child(3){animation-delay:0.2s;} #home h1 span:nth-child(4){animation-delay:0.3s;}
 #home h1 span:nth-child(5){animation-delay:0.4s;}
-
-@keyframes bounce { 0%{transform:translateY(0);} 50%{transform:translateY(-25px);} 100%{transform:translateY(0);} }
-
-#enter {
-  margin-top: 40px;
-  padding: 14px 36px;
-  font-size: 18px;
-  border: none;
-  cursor: pointer;
-  background: #111;
-  color: #fff;
-  transition: all 0.1s ease-in-out;
-  box-shadow: 0 5px #0c0c0c;
-  border-radius: 6px;
-}
-
-#enter:active {
-  transform: translateY(4px);
-  box-shadow: 0 1px #0c0c0c;
-  background: #222;
-}
+@keyframes bounce{0%{transform:translateY(0);}50%{transform:translateY(-25px);}100%{transform:translateY(0);}}
+.eye{position:absolute;width:60px;height:60px;background:#fff;border:2px solid #000;border-radius:50%;top:30%;overflow:hidden;}
+.eye.left{left:35%;} .eye.right{right:35%;}
+.pupil{position:absolute;width:20px;height:20px;background:#000;border-radius:50%;top:20px;left:20px;transition: transform 0.1s linear;}
+.eye::before{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background:#a855f7;transform:scaleY(0);transform-origin:top;animation:blink 5s infinite;}
+@keyframes blink{0%,90%,100%{transform:scaleY(0);}92%,94%{transform:scaleY(1);}}
+#enter{margin-top:40px;padding:12px 24px;font-size:18px;border:none;cursor:pointer;background:#111;color:#fff;transition:all 0.1s;box-shadow:0 4px #0c0c0c;border-radius:6px;}
+#enter:hover{background:#222;}
+#enter:active{transform:translateY(4px);box-shadow:0 1px #0c0c0c;background:#222;}
 
 /* ===== LAB ===== */
-#lab { display: none; background: #111; color: #eee; }
-h1 { text-align: center; margin: 10px 0; font-weight: 500; }
-.container { display: grid; grid-template-columns: 300px 1fr; height: calc(100vh - 50px); }
-.controls { padding: 15px; border-right: 1px solid #333; overflow-y: auto; }
-.controls h2 { font-size: 16px; margin-top: 15px; border-bottom: 1px solid #333; }
-.control { margin: 8px 0; font-size: 13px; }
-.control input { width: 100%; }
-button { width: 100%; margin-top: 5px; padding: 6px; background: #222; color: #eee; border: 1px solid #444; cursor: pointer; }
-button:hover { background: #333; }
-.panels { display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 1fr 1fr; gap: 10px; padding: 10px; }
-canvas { background: #000; border: 1px solid #333; }
-#animCanvas { width: 100%; height: 100%; }
-.chart-container { width: 100%; height: 100%; }
+#lab{display:none;background:#111;color:#eee;font-family:'Segoe UI',Tahoma,Verdana,sans-serif;}
+h1{text-align:center;margin:10px 0;font-weight:600;}
+.container{display:grid;grid-template-columns:300px 1fr;height:calc(100vh-50px);}
+.controls{padding:15px;border-right:1px solid #333;overflow-y:auto;}
+.controls h2{font-size:16px;margin-top:15px;border-bottom:1px solid #333;}
+.control{margin:8px 0;font-size:13px;}
+.control input{width:100%;}
+button{width:100%;margin-top:5px;padding:6px;background:#222;color:#eee;border:1px solid #444;cursor:pointer;}
+button:hover{background:#333;}
+.panels{display:grid;grid-template-columns:1fr 1fr;grid-template-rows:1fr 1fr;gap:10px;padding:10px;}
+canvas{background:#000;border:1px solid #333;}
 </style>
 </head>
 <body>
 
-<!-- ===== HOME ===== -->
+<!-- HOME -->
 <div id="home">
+  <div class="eye left"><div class="pupil"></div></div>
+  <div class="eye right"><div class="pupil"></div></div>
   <h1><span>H</span><span>E</span><span>L</span><span>L</span><span>O</span></h1>
-  <button id="enter">Enter Simulation</button>
+  <button id="enter">Enter</button>
 </div>
 
-<!-- ===== LAB ===== -->
+<!-- LAB -->
 <div id="lab">
 <h1>Simple Harmonic Motion Lab</h1>
 <div class="container">
@@ -92,103 +63,68 @@ canvas { background: #000; border: 1px solid #333; }
     <div class="control">x₀<input type="range" id="x0" min="-2" max="2" step="0.1" value="1"></div>
     <div class="control">v₀<input type="range" id="v0" min="-5" max="5" step="0.1" value="0"></div>
     <h2>Simulation</h2>
-    <div class="control">Time step Δt<input type="range" id="dt" min="0.005" max="0.05" step="0.005" value="0.02"></div>
-    <button onclick="paused = !paused">Pause / Resume</button>
+    <div class="control">Δt<input type="range" id="dt" min="0.005" max="0.05" step="0.005" value="0.02"></div>
+    <button onclick="paused=!paused">Pause/Resume</button>
     <button onclick="singleStep()">Single Step</button>
     <button onclick="resetSim()">Reset</button>
   </div>
-
   <div class="panels">
-    <canvas id="animCanvas"></canvas>
-    <div class="chart-container"><canvas id="xtChart"></canvas></div>
-    <div class="chart-container"><canvas id="phaseChart"></canvas></div>
-    <div class="chart-container"><canvas id="energyChart"></canvas></div>
+    <canvas id="anim" width="400" height="250"></canvas>
+    <canvas id="xt" width="400" height="250"></canvas>
+    <canvas id="phase" width="400" height="250"></canvas>
+    <canvas id="energy" width="400" height="250"></canvas>
   </div>
 </div>
 </div>
 
 <script>
-// 切換首頁 / Lab
-document.getElementById("enter").onclick = () => {
-  document.getElementById("home").style.display = "none";
-  document.getElementById("lab").style.display = "block";
-};
+// 切換首頁和 LAB
+const home=document.getElementById("home");
+const lab=document.getElementById("lab");
+document.getElementById("enter").onclick=()=>{home.style.display="none";lab.style.display="block";};
 
-// SHM 參數
-let x=1, v=0, a=0, t=0, paused=false;
-let xtData=[], phaseData=[], energyData=[];
-const mEl=document.getElementById("m"), kEl=document.getElementById("k"), cEl=document.getElementById("c");
-const F0El=document.getElementById("F0"), OmegaEl=document.getElementById("Omega");
-const x0El=document.getElementById("x0"), v0El=document.getElementById("v0"), dtEl=document.getElementById("dt");
-
-// Canvas 動畫
-const anim = document.getElementById("animCanvas");
-const ctx = anim.getContext("2d");
-
-// Chart.js
-const xtChart = new Chart(document.getElementById("xtChart"), {
-  type: 'line', data: {datasets:[{label:'x(t)',data:[],borderColor:'#0f0',borderWidth:2,fill:false}]},
-  options:{animation:false,responsive:true,scales:{x:{type:'linear',title:{display:true,text:'t'}},y:{title:{display:true,text:'x'}}}}
-});
-const phaseChart = new Chart(document.getElementById("phaseChart"), {
-  type: 'line',
-  data: {datasets:[{label:'Phase',data:[],borderColor:'#ff5555',borderWidth:2,fill:false,pointRadius:2}]},
-  options:{
-    animation:false,responsive:true,
-    scales:{
-      x:{type:'linear',min:-3,max:3,title:{display:true,text:'x'}},
-      y:{min:-5,max:5,title:{display:true,text:'v'}}
-    }
-  }
-});
-const energyChart = new Chart(document.getElementById("energyChart"), {
-  type: 'line', data: {datasets:[{label:'Energy',data:[],borderColor:'#ffff00',borderWidth:2,fill:false}]},
-  options:{animation:false,responsive:true,scales:{x:{type:'linear',title:{display:true,text:'t'}},y:{title:{display:true,text:'E'}}}}
-});
-
-// 運算
-function acceleration(x,v,t){ return (F0El.value*Math.sin(OmegaEl.value*t)-cEl.value*v-kEl.value*x)/mEl.value; }
-function resetSim(){ x=+x0El.value; v=+v0El.value; a=acceleration(x,v,t); t=0; xtData=[]; phaseData=[]; energyData=[]; }
-function singleStep(){ step(); updateCharts(); drawAnim(); }
-function step(){
-  const dtv=+dtEl.value;
-  v+=0.5*a*dtv; x+=v*dtv; a=acceleration(x,v,t); v+=0.5*a*dtv; t+=dtv;
+// 平滑眼睛跟隨
+const leftPupil=document.querySelector(".eye.left .pupil");
+const rightPupil=document.querySelector(".eye.right .pupil");
+let mouseX=0, mouseY=0;
+document.addEventListener("mousemove",e=>{mouseX=e.clientX; mouseY=e.clientY;});
+function movePupil(eye,pupil){
+  const rect=eye.getBoundingClientRect();
+  const cx=rect.left+rect.width/2, cy=rect.top+rect.height/2;
+  const dx=mouseX-cx, dy=mouseY-cy;
+  const angle=Math.atan2(dy,dx), r=10;
+  const targetX=r*Math.cos(angle), targetY=r*Math.sin(angle);
+  const current=eye._current||{x:0,y:0};
+  current.x += (targetX - current.x)*0.15;
+  current.y += (targetY - current.y)*0.15;
+  pupil.style.transform=`translate(${current.x}px,${current.y}px)`;
+  eye._current=current;
+  requestAnimationFrame(()=>movePupil(eye,pupil));
 }
+movePupil(document.querySelector(".eye.left"), leftPupil);
+movePupil(document.querySelector(".eye.right"), rightPupil);
 
-// 畫彈簧 + 白球
-function drawAnim(){
-  ctx.clearRect(0,0,anim.width,anim.height);
-  const startX=50,startY=anim.height/2,endX=200+x*50,endY=anim.height/2;
-  const segs=12;
-  ctx.strokeStyle="#888"; ctx.lineWidth=2; ctx.beginPath(); ctx.moveTo(startX,startY);
-  for(let i=1;i<=segs;i++){
-    let px=startX+(endX-startX)/segs*i;
-    let py=startY+((i%2===0)?5:-5);
-    if(i===segs) py=endY;
-    ctx.lineTo(px,py);
-  }
+// LAB 彈簧動畫
+const canvas=document.getElementById("anim"); const ctx=canvas.getContext("2d");
+let m=document.getElementById("m"),k=document.getElementById("k"),c=document.getElementById("c"),
+    F0=document.getElementById("F0"),Omega=document.getElementById("Omega"),
+    x0=document.getElementById("x0"),v0=document.getElementById("v0"),dt=document.getElementById("dt");
+let x=+x0.value,v=+v0.value,a=0,t=0,paused=false;
+function acc(x,v,t){return (F0.value*Math.sin(Omega.value*t)-c.value*v-k.value*x)/m.value;}
+function resetSim(){x=+x0.value;v=+v0.value;a=acc(x,v,t);t=0;}
+function singleStep(){step();draw();}
+function step(){const dtv=+dt.value;v+=0.5*a*dtv;x+=v*dtv;a=acc(x,v,t);v+=0.5*a*dtv;t+=dtv;}
+function draw(){ctx.clearRect(0,0,canvas.width,canvas.height);
+  // 彈簧
+  const startX=50,endX=200+x*50,y=canvas.height/2;
+  const seg=12; ctx.strokeStyle="#888"; ctx.lineWidth=2; ctx.beginPath(); ctx.moveTo(startX,y);
+  for(let i=1;i<=seg;i++){let px=startX+(endX-startX)/seg*i;let py=y+(i%2===0?5:-5);if(i===seg)py=y;ctx.lineTo(px,py);}
   ctx.stroke();
-  ctx.fillStyle="#fff"; ctx.beginPath(); ctx.arc(endX+20,endY,12,0,Math.PI*2); ctx.fill();
+  // 球
+  ctx.fillStyle="#fff"; ctx.beginPath(); ctx.arc(endX+20,y,12,0,Math.PI*2); ctx.fill();
 }
-
-// 更新 Chart.js
-function updateCharts(){
-  xtData.push({x:t,y:x});
-  phaseData.push({x:x,y:v});
-  energyData.push({x:t,y:0.5*kEl.value*x*x+0.5*mEl.value*v*v});
-  if(xtData.length>1000) xtData.shift();
-  if(phaseData.length>1000) phaseData.shift();
-  if(energyData.length>1000) energyData.shift();
-  xtChart.data.datasets[0].data = xtData;
-  phaseChart.data.datasets[0].data = phaseData;
-  energyChart.data.datasets[0].data = energyData;
-  xtChart.update('none'); phaseChart.update('none'); energyChart.update('none');
-}
-
-// 主迴圈
-function loop(){ if(!paused){ step(); updateCharts(); drawAnim(); } requestAnimationFrame(loop); }
-resetSim(); loop();
+function loop(){if(!paused){step();draw();} requestAnimationFrame(loop);}
+resetSim();loop();
 </script>
-
 </body>
 </html>
